add traditional chinese translation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   <body>
     <div class="container">
       <header>
-        <h1>Music Genre Classification Quiz</h1>
-        <p class="subtitle">Test your ability to identify musical genres</p>
+        <h1>Music Genre Classification Quiz<br><span style="font-size: 0.6em; font-weight: 400;">音樂類型分類測驗</span></h1>
+        <p class="subtitle">Test your ability to identify musical genres<br>測試您識別音樂類型的能力</p>
       </header>
 
       <% if flash[:alert] %>
@@ -34,7 +34,7 @@
       </main>
 
       <footer>
-        <p>Music Genre Quiz - Research Project</p>
+        <p>Music Genre Quiz - Research Project<br>音樂類型測驗 - 研究專案</p>
       </footer>
     </div>
   </body>
